# hello-otel

./: .env.example  .gitignore  ARCHITECTURE.md  BEST_PRACTICES.md  Dockerfile  FINAL_ARCHITECTURE.md  IMPLEMENTATION_PLAN.md  MIMIR_GUIDE.md  OBSERVABILITY_GUIDE.md  QUICKSTART.md  README.md  SIMPLIFIED_PLAN.md  alembic.ini  collector.yaml  docker-compose.yml  grafana-dashboard-todo.json  pyproject.toml
alembic/: env.py
app/: config.py  main.py
app/models/: todo.py
app/routers/: __init__.py  todos.py
app/schemas/: __init__.py  todo.py
beyla/: README.md  beyla.yaml
docs/: README.md
docs/architecture/: ARCHITECTURE.md
docs/articles/: otel-auto-instrumentation-by-language.md
docs/guides/: BEST_PRACTICES.md  OBSERVABILITY_GUIDE.md
go-app/: .env.example  Dockerfile  README.md  go.mod  go.sum
go-app/cmd/server/: main.go
go-app/internal/config/: config.go
go-app/internal/db/: db.go
go-app/internal/server/: server.go
go-app/internal/telemetry/: logger.go
go-app/internal/todo/: dto.go  model.go  repository.go
grafana/provisioning/dashboards/: todo.yaml
k6/: basic.js
llm-job/: Dockerfile  job.py  requirements.txt
node-app/: .env.example  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
node-app/prisma/: schema.prisma
node-app/src/: index.ts  otel.ts
python-app/: .env.example  README.md  pyproject.toml
python-app/app/: __init__.py  config.py  database.py
python-app/app/models/: __init__.py
quarkus-app/: .env.example  Dockerfile  README.md  pom.xml
quarkus-app/src/main/docker/: Dockerfile.jvm  Dockerfile.native
quarkus-app/src/main/java/com/example/todo/: BadRequestExceptionMapper.java  CreateTodoRequest.java  HealthResource.java  TodoEntity.java  TodoRepository.java  TodoResource.java  TodoResponse.java  (+3 more)
quarkus-app/src/main/resources/: application.properties
rust-app/: .dockerignore  Cargo.toml  Dockerfile  README.md
rust-app/src/: app.rs  config.rs  db.rs  main.rs
rust-app/src/todo/: handlers.rs  mod.rs  model.rs  repo.rs
spring-app/: .env.example  Dockerfile  README.md  pom.xml
spring-app/src/main/resources/: application.properties
(+17 files in other folders)
